objects/vlocity_cmt__AttributeAssignment__c.object
<CustomObject>
    <description>The assignment of an Attribute to an object such as an Account, Contact or Product. Product attributes define the default configuration for the product to which they are assigned.</description>
    <fields>
        <fullName>vlocity_cmt__AddDate__c</fullName>
        <description>Attribute Start Date (when an attribute was last added)</description>
        <label>Date Added</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attribute category copied from the attribute definition.</description>
        <label>Attribute Category</label>
        <referenceTo>vlocity_cmt__AttributeCategory__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeCloneable__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__IsCloneable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Cloneable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeConfigurable__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Configurable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplayNameOverride__c</fullName>
        <label>Attribute Name Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplayName__c</fullName>
        <description>Calculated display name showing the name overridden name if present, otherwise showing the Name field from the associated attribute.</description>
        <formula>IF( ISBLANK( vlocity_cmt__AttributeDisplayNameOverride__c) ,vlocity_cmt__AttributeId__r.Name,vlocity_cmt__AttributeDisplayNameOverride__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeDisplaySequence__c</fullName>
        <label>Attribute Display Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeFilterable__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Filterable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Filterable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attribute FK</description>
        <label>Attribute</label>
        <referenceTo>vlocity_cmt__Attribute__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeName__c</fullName>
        <description>DEPRECATED: Value of the Name field from the assigned Vlocity Attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AttributeUniqueCode__c</fullName>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryCode__c</fullName>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryDisplaySequence__c</fullName>
        <formula>vlocity_cmt__AttributeCategoryId__r.vlocity_cmt__DisplaySequence__c</formula>
        <label>Category Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CategoryName__c</fullName>
        <formula>vlocity_cmt__AttributeCategoryId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ConfigurationDetail__c</fullName>
        <label>Configuration Detail</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CustomConfigUiTemplate__c</fullName>
        <label>Custom Config UI Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Data__c</fullName>
        <description>Additional Data attached to the attribute</description>
        <label>Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPicklistEntryId__c</fullName>
        <description>DEPRECATED</description>
        <label>Default Picklist Entry Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DefaultPicklistValueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Picklist Value</label>
        <referenceTo>vlocity_cmt__PicklistValue__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DisplaySequence__c</fullName>
        <label>Category Display Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndStory__c</fullName>
        <description>Story Id resulting in this attribute removal</description>
        <label>Removed During</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExcludedPicklistEntryIds__c</fullName>
        <description>DEPRECATED</description>
        <label>Excluded Picklist Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ExcludedPicklistValues__c</fullName>
        <label>Excluded Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__FormatMask__c</fullName>
        <label>Format Mask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HasRule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__HelpText__c</fullName>
        <label>Help Text</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActiveAssignment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this attribute assignment is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <description>Value of the IsActive__c field from the assigned Vlocity Attribute.</description>
        <formula>vlocity_cmt__AttributeId__r.vlocity_cmt__ActiveFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsConfigurable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Configurable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsDynamic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Dynamic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsQueryDriven__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Driven</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Read Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupFilter__c</fullName>
        <label>Lookup Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Object</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LookupObjectTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lookup Object Type</label>
        <referenceTo>vlocity_cmt__ObjectClass__c</referenceTo>
        <relationshipLabel>Attribute Assignments (Lookup Object Type)</relationshipLabel>
        <relationshipName>AttributeAssignments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectId__c</fullName>
        <description>Object with assigned Attribute</description>
        <externalId>true</externalId>
        <label>Assigned To Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;vlocity_cmt__ObjectId__c, Name, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Object</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ObjectType__c</fullName>
        <description>Type of Object being assigned to this Attribute</description>
        <label>Object Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>vlocity_cmt__Picklist__c</referenceTo>
        <relationshipLabel>Attribute Assignments</relationshipLabel>
        <relationshipName>AttributeAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueryCode__c</fullName>
        <label>Query Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QueryLabel__c</fullName>
        <label>Query Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RemoveDate__c</fullName>
        <description>Date when attribute was last removed</description>
        <label>Date Removed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RemovedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If an assignment is removed, check this flag &amp; update RemoveDate</description>
        <label>Attribute Has Been Removed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleData__c</fullName>
        <label>Rule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RuleMessage__c</fullName>
        <label>Rule Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartStory__c</fullName>
        <description>Story Id resulting in the Attribute Assignment</description>
        <label>Added During</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StyleClass__c</fullName>
        <description>Reserved for future use.</description>
        <label>Style Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__UIDisplayType__c</fullName>
        <label>UI Display Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValidValuesData__c</fullName>
        <label>Valid Values Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueDataType__c</fullName>
        <label>Value Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currency</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueDescription__c</fullName>
        <label>Value Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ValueInNumber__c</fullName>
        <formula>VALUE(vlocity_cmt__Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Value__c</fullName>
        <description>Attribute value (attribute strength) eg 0-5</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__ObjectLink__c</columns>
        <columns>vlocity_cmt__ObjectId__c</columns>
        <columns>vlocity_cmt__AttributeCategoryId__c</columns>
        <columns>vlocity_cmt__AttributeId__c</columns>
        <columns>vlocity_cmt__Data__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>No_Attributes</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__AttributeId__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Attributes</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>vlocity_cmt__AttributeUniqueCode__c</columns>
        <columns>vlocity_cmt__ObjectLink__c</columns>
        <columns>vlocity_cmt__AttributeDisplayName__c</columns>
        <columns>vlocity_cmt__IsOverride__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Attribute Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>